@@ -1,5 +1,11 @@
 2024-04-22 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/z80/gen.c,
+	  src/z80/peeph.def:
+	  Improve storing of 0 into global variables.
+
+2024-04-22 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* support/scripts/as2gbmap.py:
 	  Migrate as2gbmap to Python 3, patch from Debian.
 	* src/z80/peep.c:
